--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <link rel=styleSheet href=css/myRewards.css>
         <link rel=stylesheet href=https://lib.baomitu.com/font-awesome/4.7.0/css/font-awesome.min.css>
     </head>
-    <title>资源储物间</title>
+    <title>卡洛资源库</title>
     <body>
         <button onclick=changemode() class="darkmode-toggle--white darkmode-toggle">
             <div class=light>☀️</div>
