--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </a>
         <div id=top>
             <a class=topSerach onclick=show()>
-                点击展开文件夹可搜 <i class="fa fa-weixin"></i>
+                点击此处展开全部文件夹按Ctrl+F搜索 <i class="fa fa-weixin"></i>
             </a>
     
         </div>
@@ -15728,7 +15728,7 @@
         </div>
         <script>
             window.tctipConfig = {
-                headText: "任何问题请到公众号留言反馈",
+                headText: "本空间借用阿虚同学储物空间",
                 siderText: "公告 ● 支持",
                 siderTextTop: "-72px",
                 siderBgcolor: "#323d45",
@@ -15742,12 +15742,12 @@
                         text: '<p style="line-height:30px;font-size:13px;text-align:center;background-color:#e7e7e7;border-radius:10px;margin-top:-8px;color:cornflowerblue;">最后更新时间</p><p style="line-height:30px;font-size:9px;text-align:center;background-color:#e7e7e7;margin-top:-23px;color:cornflowerblue;">12月06日 22:59</p>✅12月6日<br><br>    4－1栏：免费GPT工具更新／清理失效站点<br><br>    ✅12月5日<br><br>    1－8栏：更新大量TVBOX视频源<br><br>    2－9栏：安卓免费听书APP版本更新<br><br>    5－2栏：Adobe系列软件一键安装版、XP版、PS单文件版新增下载地址<br><br>    ✅12月2日<br><br>    2－1－1栏：更新zlibrary最新地址<br><br>    6－5－3栏：多邻国破解版更新<br><br>    ✅11月22日<br><br>    1－8栏：受广电封杀，大多数电视直播APP已失效，更新5款仅存可用的TV直播APP<br><br>    ✅11月15日<br><br>    6－3－1栏：抖音内置模块板更新<br><br>    ✅11月6日<br><br>    5－11栏：新增1个稳定的免费百度网盘加速下载方法<br><br>    ✅11月3日<br><br>    6－22栏：新增支持SMB2/3的文件管理APP<br><br>    ✅11月1日<br><br>    1－12栏：更新5个体育直播网站<br><br>    4－2栏：新增1个国产ChatGPT聚合站<br><br>    7－1栏：更新装机科普、选购推荐相关文章<br><br>    ✅10月28日<br><br>    5－2栏：Adobe系列软件新增2024版高速下载地址<br><br>    其他： 即日起至 11 月 15 日，数码荔枝上购买任意软件，输入优惠码“axu231111”可额外享受95折优惠<br><br>    ✅10月26日<br><br>    2－6栏：再新增5个免费音乐下载网站<br><br>    2－7栏：洛雪音乐助手收腾讯律师函停服，但更新了继续可用的办法<br><br>    ✅10月24日<br><br>    5－14栏：更新1款免费在线画图工具（思维导图、流程图、图表等）<br><br>    7－1栏：清理一些失效、过期、带返利推广的文章链接<br><br>    ✅10月23日<br><br>    2－1－1栏：超星读秀书库+百度网盘免费秒传下载法，使用教程已更新<br><br>    5－11栏：更新1款百度云加速下载工具<br><br>    5－11－1栏：更新1款微信视频号下载工具<br><br>    ✅10月17日<br><br>    2－9栏：免费听书栏目调整到此栏<br><br>    ✅10月15日<br><br>    6－20栏：自动跳过广告APP更新<br><br>    ✅10月9号<br><br>    1－8栏：更新部分版本 TVBOX 下载链接，新增 TVBOX 老电视兼容版<br><br>    6－7－2栏：更新多款全平台短视频解析下载APP，部分支持批量下载<br><br>    8－3栏：谷歌镜像网址更新<br><br>    9－5栏：新增1个优质免费在线工具箱网站<br><br>    其他：清理了一些失效的直播、AI网站<br><br>'
                     },
     
-                    weixin: {
-                        name: "赞赏",
-                        desc: "点击公众号文章底部的广告，也是支持卡洛斯的一种方式（腾讯替你出钱，无需关注or下载广告内容，只需点击一下再关掉页面即可，卡洛斯这边就会有些许收入，每个微信号计1天1次有效点击）",
-                        icon: "https://cbu01.alicdn.com/img/ibank/O1CN01ygmYN51WC0T1Nfby9_!!2793632751-0-cib.jpg",
-                        qrimg: "https://img.gejiba.com/images/58143f60c438a7a68e013f8b5bd06d44.png"
-                    }
+                    // weixin: {
+                    //     name: "赞赏",
+                    //     desc: "点击公众号文章底部的广告，也是支持卡洛斯的一种方式（腾讯替你出钱，无需关注or下载广告内容，只需点击一下再关掉页面即可，卡洛斯这边就会有些许收入，每个微信号计1天1次有效点击）",
+                    //     icon: "https://cbu01.alicdn.com/img/ibank/O1CN01ygmYN51WC0T1Nfby9_!!2793632751-0-cib.jpg",
+                    //     qrimg: "https://img.gejiba.com/images/58143f60c438a7a68e013f8b5bd06d44.png"
+                    // }
                 }
             }
         </script>
