--- a/index.html
+++ b/index.html
@@ -15682,15 +15682,15 @@
           
                 <li style="font-size:12px;text-indent:-30px;padding:2 0 2 0;line-height:1">
                     <img style=width:24px;margin-right:2;vertical-align:middle src=https://wework.qpic.cn/wwpic/124822_T2o42DSBTqOYCNB_1686537148>
-                    <a target="_blank" href=https://chat.plexpt.com/i/637222>ChatGPT加强版上线！无需梯子、极速稳定、GPT4通道、超强接口！（制造喵）</a>
+                    <a target="_blank" href=https://chat.plexpt.com/i/637222>站长推荐的ChatGPT加强版上线！无需梯子、极速稳定、GPT4通道、超强接口！（制造喵——国人在github上的高星项目）</a>
                 </li>
                 <li style="font-size:12px;text-indent:-30px;padding:2 0 2 0;line-height:1">
                     <img style=width:24px;margin-right:2;vertical-align:middle src=https://wework.qpic.cn/wwpic/124822_T2o42DSBTqOYCNB_1686537148>
-                    <a target="_blank" href=https://chat.plexpt.com/i/637222>ChatGPT加强版上线！无需梯子、极速稳定、GPT4通道、超强接口！（制造喵）</a>
+                    <a target="_blank" href=https://chat.plexpt.com/i/637222>站长推荐的ChatGPT加强版上线！无需梯子、极速稳定、GPT4通道、超强接口！（制造喵——国人在github上的高星项目）</a>
                 </li>
                 <li style="font-size:12px;text-indent:-30px;padding:2 0 2 0;line-height:1">
                     <img style=width:24px;margin-right:2;vertical-align:middle src=https://wework.qpic.cn/wwpic/124822_T2o42DSBTqOYCNB_1686537148>
-                    <a target="_blank" href=https://chat.plexpt.com/i/637222>ChatGPT加强版上线！无需梯子、极速稳定、GPT4通道、超强接口！（制造喵）</a>
+                    <a target="_blank" href=https://chat.plexpt.com/i/637222>站长推荐的ChatGPT加强版上线！无需梯子、极速稳定、GPT4通道、超强接口！（制造喵——国人在github上的高星项目）</a>
                 </li>
             </ul>
         </aside>
